--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Matthew Stollfus' Webpage</h1>
-    <img src="#" alt="Profile Picture" width="200px">
+    <img src="./images/headshot.png" alt="Profile Picture" width="200px">
     <h3>About Me</h3>
     <p>Hello, my name is Matthew Stollfus, I was born and raised in Eagle Idaho and am currently attending Boise State University with a computer science major. More specifically, I am interested in artificial intelligence, and want to develop AI in the future.</p>
     <h3>Interests / Hobbies</h3>
